# ApolloTab

./: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml  release notes.md
.trae/specs/tab-info-bar-layout/: checklist.md  spec.md  tasks.md
ApolloTab/: README.md  __init__.py  player.py  py.typed
ApolloTab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ApolloTab/audio/: __init__.py  metronome.py  midi_converter.py  synth_engine.py
ApolloTab/examples/: audio_playback.py  render_tab.py
ApolloTab/models/: beat.py  measure.py  note.py  song.py  track.py
ApolloTab/parser/: __init__.py  binary_stylesheet.py  gp7_parser.py  gpif_parser.py  gtp_parser.py  part_configuration.py
ApolloTab/renderer/: __init__.py  layout_engine.py  tab_renderer.py
ApolloTab/utils/: __init__.py  constants.py
examples/: basic_parse.py
readme/: 功能更新.md
